upload od ver 0.1 html/css

--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+ <style>
+ img{
+   width: 75%;
+   margin: auto;
+   display: block;
+  
+  
+  }
+  p{
+    font-size:18pt;
+    margi: 5px 5px 25px 5px;
+  }
+  h1{
+    text-decoration-line: underline;
+    font-size 40pt;
+    text-align:center;
+    color:#ffeebb;
+    background-color:maroon;
+  }
+  </style>
 <head>
-    <meta charset="utf-8">
-    <link rel="dns-prefetch" href="//127.0.0.1">
-
-    <!-- AdobePatentID="P5086-US" -->
-    <!-- AdobePatentID="P5087-US" -->
-
-    <title>CC Libraries</title>
-    <script>
-        window.nodeRequire = (window.cep_node && window.cep_node.require) || window.require || function () {};
-        window.process = window.process || (window.cep_node && window.cep_node.process);
-    </script>
-    
+<title>Richard</title>
+<link rel="stylesheet" href="Huynh_style.css">
 </head>
-
 <body>
-    <div id="content"></div>
-<script type="text/javascript" src="main.js"></script></body>
+
+<h1>Richard Huynh</h1>
+<h2>Major Characters</h2>
+<p> Guy likes music and has tinnitus, he is also good at driving</p>
+<p class="fancy"> Buddy is a bad guy that tries to kill him</p>
+<p>Boss has a shotgun in the end</p>
+<p>guy that likes music becomes getaway driver for a crime boss and getaway driver falls in love.</p>
+<img src="https://i.kym-cdn.com/entries/icons/original/000/036/822/cover4.jpg" alt="Trulli" width="500" height="333">
+<a href="https://en.wikipedia.org/wiki/Baby_Driver">link text</a>
+</body>
 </html>
+
