--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <body>
 
 <h1>Richard Huynh</h1>
+ <a bref="ECS_HTML/index.html">ECS HTML project</a>
 <h2>Major Characters</h2>
 <p> Guy likes music and has tinnitus, he is also good at driving</p>
 <p class="fancy"> Buddy is a bad guy that tries to kill him</p>
